--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+@import "tailwindcss";
+@plugin "daisyui";
+
+
+@plugin "daisyui" {
+    themes: ['dark'],
+    base: false
+  }
